--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -128,12 +128,12 @@ body.sidebar-footer {
   body { -webkit-text-size-adjust: auto; }
   body > header { font-size: $header-font-size * 1.2; }
   #main {
-    @extend .group;
+    @include pie-clearfix;
     padding: 0;
     margin: 0 auto;
   }
   #content {
-    @extend .group;
+    @include pie-clearfix;
     margin-right: $sidebar-width-medium;
     position: relative;
     .no-sidebar & { margin-right: 0; border-right: 0; }
@@ -145,7 +145,7 @@ body.sidebar-footer {
     }
   }
   aside.sidebar {
-    @extend .group;
+    @include pie-clearfix;
     width: $sidebar-width-medium - $sidebar-pad-medium*2;
     padding: 0 $sidebar-pad-medium $sidebar-pad-medium;
     background: none;
@@ -176,7 +176,7 @@ body.sidebar-footer {
     padding: 1.2em $sidebar-pad-wide $sidebar-pad-wide;
     .collapse-sidebar & {
       padding: { left: $pad-wide; right: $pad-wide; }
-      @extend .group;
+      @include pie-clearfix;
     }
   }
 }
